change img jumbotron commit

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             <p>"Start your day right or take a break with the perfect cup of Starbucks. One sip, endless joy!"</p>
         </div>
         <div class="image">
-            <img src="img/coffee 1.png" alt="" width="400px">
+            <img src="img/coffee 1.png" alt="" width="400px" class="jumbo-image">
         </div>
-        <div class="menu">
-            <img src="img/coffee 1.png" alt="" width="100px">
-            <img src="img/coffee 2 bw.png" alt="" width="100px">
-            <img src="img/coffee 3 bw.png" alt="" width="100px">
+        <div class="menu"> 
+            <img src="img/coffee 1.png" alt="" width="100px" class="coffee1">
+            <img src="img/coffee 2 bw.png" alt="" width="100px" class="coffee2">
+            <img src="img/coffee 3 bw.png" alt="" width="100px" class="coffee3">
         </div>
         </div>
 
